# gp-benchmarks

./: .gitignore  README.md  main.py  pyproject.toml
data/uci/: heart.csv  waveform.csv  yeast.csv
notebooks/: main.ipynb
scripts/: benchmarks.py  parser.py
src/: run.sh  run_ge.sh  run_ge_grammar.sh  run_parser.sh
